Added results formatting on client side

--- a/Geobase/wwwroot/index.html
+++ b/Geobase/wwwroot/index.html
@@ -6,14 +6,14 @@
     <link rel="stylesheet" href="css/site.css">
 </head>
 <body>
-<div id="menu" class="sidebar">
-    <a href="#cityLocations">Get city locations</a>
-    <a href="#ipLocation">Get ip location</a>
-</div>
-<div id="main">
-    <h1>Geobase</h1>
+    <div id="menu" class="sidebar">
+        <h1>Geobase</h1>
+        <a href="#cityLocations">Get city locations</a>
+        <a href="#ipLocation">Get ip location</a>
+    </div>
+<div id="main">    
     <div id="content">
-        C O N T E N T
+        Loading...
     </div>
 </div>
 <script src="js/route.js"></script>
